# para-dflow

./: Cargo.toml  README.md  blog.md
.github/workflows/: ci.yaml
binaries/: Cargo.toml
binaries/benches/: liveness.rs  reaching_def.rs
bril/: Cargo.toml
bril-analysis/: Cargo.toml
bril-analysis/src/: lib.rs  parallel.rs  scc.rs  sequential.rs
bril-analysis/src/analysis/: liveness.rs  mod.rs  reaching_def.rs
bril-cfg/: Cargo.toml
bril-cfg/src/: lib.rs
bril-fuzzer/: Cargo.toml
bril-fuzzer/macros/: Cargo.toml
bril-fuzzer/macros/src/: lib.rs
bril-fuzzer/src/: dist.rs  fuzzer.rs  instr.rs  main.rs  stats.rs
bril/src/: ast.rs  ast_to_ir.rs  builder.rs  ir.rs  lib.rs  printer.rs  shim.rs
