[workspace]
resolver = "3"
members = ["bril", "bril-analysis", "bril-cfg", "bril-fuzzer"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Zihan Li", "Ethan Uppal"]

[workspace.dependencies]
bril-rs = { git = "https://github.com/sampsyo/bril", rev = "175580e" }
bril = { path = "bril" }
slotmap = "1.0.7"
baa = "0.16.9"
