[workspace]
resolver = "3"
members = [ "bril", "bril-analysis", "bril-cfg", "bril-fuzzer"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Zihan Li", "Ethan Uppal"]

[workspace.dependencies]
bril-rs = { git = "https://github.com/sampsyo/bril", rev = "175580e" }
bril = { path = "bril" }
bril-cfg = { path = "bril-cfg" }
bril-analysis = { path = "bril-analysis" }
slotmap = "1.0.7"
rayon = "1.10.0"
fixedbitset = "0.5.7"
