[workspace]
resolver = "3"
members = ["bril", "bril-analysis", "bril-cfg", "bril-fuzzer", "binaries"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Zihan Li", "Ethan Uppal"]

[workspace.dependencies]
bril-rs = { git = "https://github.com/sampsyo/bril", rev = "175580e" }
bril = { path = "bril" }
bril-cfg = { path = "bril-cfg" }
bril-analysis = { path = "bril-analysis" }
clap = { version = "4.5.37", features = ["derive"] } 
slotmap = "1.0.7"
rayon = "1.10.0"
fixedbitset = { rev = "254ea483e47bcd0ae519c0ee8696f29edd17a9b5", git = "https://github.com/ethanuppal/fixedbitset-fork"}
dashmap = "6.1.0"
