[package]
name = "binaries"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bril-rs.workspace = true
bril-cfg.workspace = true
bril-analysis.workspace = true
bril.workspace = true
serde_json = "1.0.140"
clap = {version = "4.5.37", features = ["derive"]} 
slotmap.workspace = true